# ictis-ml_ta

./: .gitignore  CMakeLists.txt  README.md  input.txt
2sem/: 4laba.cpp  CMakeLists.txt  center_mass.cpp  dif_of_sets.cpp  local_extremes.cpp  test_struct.cpp  txt2bin.cpp
2sem/lab1/: CMakeLists.txt
2sem/lab1/center_mass/: CMakeLists.txt  center_mass.cpp
2sem/lab1/local_extremes/: CMakeLists.txt  local_extremes.cpp
2sem/lab1/var4_parametricheskaya_func/: main.cpp
2sem/lab2/: CMakeLists.txt
2sem/lab2/diff_of_sets/: CMakeLists.txt  dif_of_sets.cpp
2sem/lab2/intersection_of_sets/: CMakeLists.txt  intersection_of_sets.cpp
2sem/lab3/: CMakeLists.txt  main.cpp
2sem/lab4/: CMakeLists.txt  DataSet.cpp  DataSet.h  DateTime.h  input.txt  main.cpp  outgoing_calls.cpp  output.txt
2sem/lab5/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  selection.cpp  selection.h
2sem/lab5/Входные&Выходные данные/A.a/: input.txt  output.txt
2sem/lab5/Входные&Выходные данные/A.b/: input.txt  output.txt
2sem/lab5/Входные&Выходные данные/B.a/: input.txt  output.txt
2sem/lab5/Входные&Выходные данные/B.b/: input.txt  output.txt
2sem/lab5/Входные&Выходные данные/C.a/: input.txt  output.txt
2sem/lab5/Входные&Выходные данные/С.b/: input.txt  output.txt
2sem/phone_numbers/: CMakeLists.txt  a.out  input.txt  main.cpp  output.txt  phone.cpp  phone_code.cpp  phone_code.h
utils/: CMakeLists.txt  file_manager.cpp  file_manager.h
