cmake_minimum_required(VERSION 3.8)
project(assigment_1)

set(CMAKE_CXX_STANDARD 11)


add_executable(local_extremes.cpp local_extremes.cpp)
add_executable(center_mass.cpp center_mass.cpp)
add_executable(txt2bin.cpp txt2bin.cpp)

add_executable(dif_of_sets dif_of_sets.cpp)
add_executable(intersection_of_sets.cpp intersection_of_sets.cpp)