cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD 11)


#add_executable(lab1/local_extremes.cpp lab1/local_extremes.cpp)
#add_executable(lab1/center_mass.cpp lab1/center_mass.cpp)
#add_executable(txt2bin.cpp txt2bin.cpp)
#
#add_executable(dif_of_sets lab2/dif_of_sets.cpp)
#add_executable(lab2/intersection_of_sets.cpp lab2/intersection_of_sets.cpp)

add_subdirectory(center_mass)
add_subdirectory(local_extremes)
#add_subdirectory(lab3)